# proto2ros-release

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.config/: mypy.ini  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cmake/templates/: mypy.ini.in
debian/: changelog  control  copyright  gbp.conf  rules
msg/: Any.msg  Struct.msg  StructEntry.msg  Value.msg
proto2ros/: CHANGELOG.rst  CMakeLists.txt  README.md  proto2ros-extras.cmake  setup.cfg
proto2ros/cmake/: proto2ros_generate.cmake  proto2ros_vendor_package.cmake  rosidl_helpers.cmake
proto2ros/descriptors/: types.py  utilities.py
proto2ros/doc/: conf.py
proto2ros/include/proto2ros/: conversions.hpp
proto2ros/msg/: AnyProto.msg  Bytes.msg  List.msg
proto2ros/proto2ros/: compatibility.py  dependencies.py  equivalences.py  utilities.py
proto2ros/proto2ros/cli/: generate.py
proto2ros/proto2ros/configuration/: __init__.py
proto2ros/src/: conversions.cpp
proto2ros_tests/: CHANGELOG.rst  CMakeLists.txt  package.xml
proto2ros_tests/include/proto2ros_tests/: manual_conversions.hpp
proto2ros_tests/proto/: CMakeLists.txt
proto2ros_tests/proto2ros_tests/: manual_conversions.py
proto2ros_tests/src/: manual_conversions.cpp
proto2ros_tests/test/: test_proto2ros.cpp  test_proto2ros.py
rpm/: ros-humble-proto2ros.spec  ros-jazzy-proto2ros.spec
(+6 files in other folders)
